--- a/packages/pure/components/advanced/Quote.astro
+++ b/packages/pure/components/advanced/Quote.astro
@@ -34,7 +34,8 @@ const { class: className } = Astro.props
 
     connectedCallback() {
       // Because virtual:config can only be accessed using json string, function cannot work, so we need to use new Function
-      const targetFunction = new Function('data', 'return (' + quote.target + ')(data)')
+      const targetFunction = eval(`(${quote.target})`)
+      // const targetFunction = new Function('return ' + quote.target)()
       fetch(quote.server)
         .then((response) => response.json())
         .then((data) => this.render(targetFunction(data)))
