--- a/src/pages/projects/index.astro
+++ b/src/pages/projects/index.astro
@@ -161,11 +161,13 @@ const headings = [
   />
   <p>Thanks to the following sponsors:</p>
   <Sponsors
+    progressMax={25}
     sponsors={[
-      { name: 'C*a（酷安@暴走の蜗牛）', amount: '2.00', date: '2019-07-02' },
-      { name: '华雄(QQ：1300****71)', amount: '5.00', date: '2019-12-30' },
-      { name: '◌(QQ：1934****45)', amount: '3.00', date: '2019-12-30' },
-      { name: 'Anonymous', amount: '20.00', date: '2022-04-06' }
+      { name: 'Arthal', platform: 'Wechat', amount: 50, date: '2025-11-06' },
+      { name: 'Anonymous', platform: 'Wechat', amount: 20, date: '2022-04-06' },
+      { name: '华雄 (1300****71)', platform: 'QQ', amount: 5, date: '2019-12-30' },
+      { name: '◌ (1934****45)', platform: 'QQ', amount: 3, date: '2019-12-30' },
+      { name: 'C*a (酷安@暴走の蜗牛)', amount: 2, date: '2019-07-02' }
     ]}
   />
 </PageLayout>
