docs(pages): :memo: remove theme block; move theme to programs

--- a/src/pages/projects/index.astro
+++ b/src/pages/projects/index.astro
@@ -11,7 +11,6 @@ import KeyIcon from '@/assets/icons/key.svg'
 import wechat from '@/assets/wechat-qrcode.jpg'
 
 const headings = [
-  { depth: 2, slug: 'theme', text: 'Theme' },
   { depth: 2, slug: 'programs', text: 'Programs' },
   { depth: 2, slug: 'learnings', text: 'Learnings' },
   { depth: 2, slug: 'others', text: 'Others' },
@@ -38,37 +37,17 @@ const headings = [
     <Icon class='size-5' name='receive-money' slot='before' />
   </Button>
 
-  <h2 id='theme'>Theme</h2>
-  <ProjectSection
-    projects={[
-      {
-        name: '🍭 Astro-theme-pure',
-        description: 'A simple, clean but powerful blog theme build by astro.',
-        links: [
-          { type: 'github', href: 'https://github.com/cworld1/astro-theme-pure' },
-          { type: 'site', href: 'https://github.com/cworld1/astro-theme-pure' },
-          {
-            type: 'doc',
-            href: 'https://github.com/cworld1/astro-theme-pure/blob/main/src/content/blog/customize/index.md'
-          }
-        ]
-      }
-    ]}
-  />
-
   <h2 id='programs'>Programs</h2>
   <ProjectSection
     projects={[
       {
-        name: '📒 Notie',
-        description:
-          'Android note App complies with Material You specifications, developed using Java',
+        name: '🎨 Astro Theme Pure',
+        description: 'A simple, fast and powerful blog & document theme built by Astro',
         links: [
-          { type: 'github', href: 'https://github.com/cworld1/notie' },
-          {
-            type: 'release',
-            href: 'https://github.com/cworld1/notie/releases'
-          }
+          { type: 'github', href: 'https://github.com/cworld1/astro-theme-pure' },
+          { type: 'site', href: 'https://astro-pure.js.org/' },
+          { type: 'doc', href: 'https://astro-pure.js.org/docs/list' },
+          { type: 'release', href: 'https://www.npmjs.com/package/astro-pure' }
         ]
       },
       {
