perf(assets): :rocket: replace pics to smaller ones

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -143,26 +143,26 @@ const allPostsByDate = sortMDByDate(allPosts).slice(0, MAX_POSTS)
           <ProjectCard
             href='https://www.youtube.com/watch?v=dQw4w9WgXcQ'
             heading='Lorem ipsum'
-            subheading='dolor sit amet, oratio ornatus explicari pro ex'
-            imagePath='/src/assets/projects/alex-tyson-2BAXJ7ha74s-unsplash.jpg'
+            subheading='Do not go gentle into that good night'
+            imagePath='/src/assets/projects/1.jpg'
           />
           <ProjectCard
             href='https://www.youtube.com/watch?v=dQw4w9WgXcQ'
             heading='Lorem ipsum'
-            subheading='dolor sit amet, oratio ornatus explicari pro ex'
-            imagePath='/src/assets/projects/angelica-teran-Bk9hpaXHK4o-unsplash.jpg'
+            subheading='Old age burn and rave at close of day'
+            imagePath='/src/assets/projects/2.jpg'
           />
           <ProjectCard
             href='https://www.youtube.com/watch?v=dQw4w9WgXcQ'
             heading='Lorem ipsum'
-            subheading='dolor sit amet, oratio ornatus explicari pro ex'
-            imagePath='/src/assets/projects/kseniia-zapiatkina-yATU3rg8tNI-unsplash.jpg'
+            subheading='Rage, rage against the dying of the light'
+            imagePath='/src/assets/projects/3.jpg'
           />
           <ProjectCard
             href='/projects'
             heading='More projects'
             subheading='Check out more projects'
-            imagePath='/src/assets/projects/wen-qiao-g_w8I64FiO0-unsplash.jpg'
+            imagePath='/src/assets/projects/4.jpg'
           />
         </div>
       </Section>
