style: :art: update code style

--- a/packages/pure/components/basic/Header.astro
+++ b/packages/pure/components/basic/Header.astro
@@ -73,7 +73,7 @@ import { Icon } from '../user'
 <script>
   import { setTheme, showToast } from '../../utils'
 
-  class Header extends HTMLElement {
+  class HeaderComponent extends HTMLElement {
     constructor() {
       super()
     }
@@ -108,7 +108,7 @@ import { Icon } from '../user'
     }
   }
 
-  customElements.define('header-component', Header)
+  customElements.define('header-component', HeaderComponent)
 </script>
 
 <style>
