--- a/src/layouts/IndividualPage.astro
+++ b/src/layouts/IndividualPage.astro
@@ -1,11 +1,11 @@
 ---
 import type { MarkdownHeading, MarkdownLayoutProps } from 'astro'
+import config from 'virtual:config'
 
 import { BackToTop, TOC } from 'astro-pure/components/pages'
 import { Button, Icon } from 'astro-pure/user'
 import { cn } from 'astro-pure/utils'
 import PageLayout from '@/layouts/BaseLayout.astro'
-import { integ } from '@/site-config'
 
 type Props = MarkdownLayoutProps<{
   title: string
@@ -19,7 +19,7 @@ type Props = MarkdownLayoutProps<{
 
 const { frontmatter, headings } = Astro.props
 const { title, description, heroImage, language, back } = frontmatter
-const socialImage = heroImage?.src ?? '/images/social-card.png'
+const socialImage = heroImage?.src ?? config.socialCard
 ---
 
 <PageLayout meta={{ title, description, ogImage: socialImage }}>
@@ -64,7 +64,7 @@ const socialImage = heroImage?.src ?? '/images/social-card.png'
         id='content'
         class={cn(
           'animate mt-8 max-w-none md:min-w-[45ch] overflow-x-hidden',
-          integ.typography.class
+          config.integ.typography.class
         )}
       >
         <slot />
