--- a/src/components/home/ProjectCard.astro
+++ b/src/components/home/ProjectCard.astro
@@ -44,10 +44,10 @@ if (!images[imagePath])
   <Image
     src={images[imagePath]()}
     alt={altText ?? heading}
-    class='absolute top-0 w-full object-contain opacity-60 transition-opacity group-hover:opacity-100 dark:opacity-35'
+    class='absolute top-0 w-full h-full object-cover opacity-60 transition-opacity group-hover:opacity-100 dark:opacity-35'
     loading='lazy'
   />
-  <div class='project-card-fg z-10 flex flex-col gap-y-0.5 px-5 pb-4 pt-36 transition-all'>
+  <div class='project-card-fg z-10 flex flex-1 flex-col gap-y-0.5 px-5 pb-4 pt-36 transition-all'>
     <h2 class='text-lg font-medium'>{heading}</h2>
     <p class='text-muted-foreground'>{subheading}</p>
   </div>
@@ -60,7 +60,7 @@ if (!images[imagePath])
     --un-gradient: var(--un-gradient-shape), var(--un-gradient-stops);
     --un-gradient-from-position: 0%;
     --un-gradient-from: transparent var(--un-gradient-from-position);
-    --un-gradient-to-position: 65%;
+    --un-gradient-to-position: 80%;
     --un-gradient-to: hsl(var(--primary-foreground) / var(--un-to-opacity, 1))
       var(--un-gradient-to-position);
     --un-gradient-stops: var(--un-gradient-from), var(--un-gradient-to);
@@ -68,6 +68,6 @@ if (!images[imagePath])
   }
 
   .project-card:hover .project-card-fg {
-    --un-gradient-to-position: 80%;
+    --un-gradient-to-position: 100%;
   }
 </style>
