refactor: :lipstick: improve font display

--- a/packages/pure/components/basic/Header.astro
+++ b/packages/pure/components/basic/Header.astro
@@ -8,7 +8,7 @@ import { Icon } from '../user'
   class='group sticky top-4 z-50 max-md:z-30 mb-12 flex items-center justify-between rounded-xl border border-transparent max-sm:py-1 sm:rounded-2xl'
 >
   <a
-    class='z-30 text-xl font-semibold group-[.not-top]:ms-2 sm:group-[.not-top]:ms-3'
+    class='z-30 text-xl font-medium group-[.not-top]:ms-2 sm:group-[.not-top]:ms-3'
     style='transition:margin-inline 0.3s'
     href='/'
     aria-label='Brand'>{config.title}</a
