--- a/packages/pure/components/pages/TOC.astro
+++ b/packages/pure/components/pages/TOC.astro
@@ -16,7 +16,7 @@ const toc = generateToc(headings)
 ---
 
 <toc-heading class={className} {...props}>
-  <h2 class='font-semibold'>TABLE OF CONTENTS</h2>
+  <h2 class='font-medium'>TABLE OF CONTENTS</h2>
   <ul class='mt-4 text-card-foreground'>
     {toc.map((heading) => <TOCHeading heading={heading} />)}
   </ul>
