--- a/src/pages/blog/[...page].astro
+++ b/src/pages/blog/[...page].astro
@@ -82,7 +82,7 @@ const paginationProps = {
           {/* sidebar */}
           {!!uniqueTags.length && (
             <aside class='animate' id='sidebar'>
-              <h2 class='mb-4 flex items-center text-lg font-semibold'>
+              <h2 class='mb-4 flex items-center text-lg font-medium'>
                 <Icon name='tag-2' class='me-2' />
                 Tags
               </h2>
