--- a/src/components/home/ProjectCard.astro
+++ b/src/components/home/ProjectCard.astro
@@ -62,8 +62,7 @@ if (!images[imagePath])
     --un-gradient-from-position: 0%;
     --un-gradient-from: transparent var(--un-gradient-from-position);
     --un-gradient-to-position: 80%;
-    --un-gradient-to: hsl(var(--primary-foreground) / var(--un-to-opacity, 1))
-      var(--un-gradient-to-position);
+    --un-gradient-to: hsl(var(--card) / var(--un-to-opacity, 1)) var(--un-gradient-to-position);
     --un-gradient-stops: var(--un-gradient-from), var(--un-gradient-to);
     background-image: linear-gradient(var(--un-gradient));
   }
