refactor: :lipstick: improve font look

--- a/packages/pure/components/advanced/GithubCard.astro
+++ b/packages/pure/components/advanced/GithubCard.astro
@@ -29,7 +29,7 @@ const [owner, repoName] = repo.split('/')
           <div class='flex items-center gap-x-1 max-sm:flex-wrap'>
             <span class='truncate text-base transition-colors sm:text-lg'>{owner}</span>
             <span class='text-muted-foreground max-sm:hidden'>/</span>
-            <span class='truncate text-base font-bold transition-colors sm:text-lg max-sm:w-full'
+            <span class='truncate text-base font-medium transition-colors sm:text-lg max-sm:w-full'
               >{repoName}</span
             >
           </div>
