refactor(plugins): :lipstick: small ui improve

--- a/src/pages/archives/index.astro
+++ b/src/pages/archives/index.astro
@@ -31,7 +31,7 @@ const meta = {
         allPostsByYear.map(([year, posts]) => (
           <div class='relative mt-20'>
             <h2
-              class='absolute -start-6 -top-16 z-0 text-9xl font-bold text-transparent opacity-10'
+              class='absolute -start-6 -top-16 z-0 text-9xl font-bold text-transparent opacity-12 dark:opacity-25'
               style='-webkit-text-stroke-width:2px;-webkit-text-stroke-color:hsl(var(--foreground)/var(--un-text-opacity))'
             >
               <samp>{year}</samp>
