--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -34,7 +34,7 @@ if (!images[imagePath])
     <section class='animate mb-10 flex flex-col items-center gap-y-7' id='content-header'>
       <Image
         src={images[imagePath]()}
-        alt={config.logo.alt || 'Logo'}
+        alt={config.logo.alt || 'Profile'}
         class='h-28 w-auto rounded-full border p-1'
         loading='eager'
         fetchpriority='high'
