--- a/src/pages/projects/index.astro
+++ b/src/pages/projects/index.astro
@@ -65,17 +65,21 @@ const headings = [
     <ProjectSection
       projects={[
         {
-          name: 'Search Switcher',
-          description: 'Add links to each other in search engines',
-          links: [{ type: 'github', href: 'https://github.com/cworld1/search-switcher' }]
+          name: '🧩 rehype-autolink-headings-simple',
+          description: 'A simple version of rehype-autolink-headings',
+          links: [
+            { type: 'github', href: 'https://github.com/cworld1/rehype-autolink-headings-simple' },
+            {
+              type: 'release',
+              href: 'https://www.npmjs.com/package/rehype-autolink-headings-simple'
+            }
+          ]
         },
         {
-          name: 'Pure Baidu',
-          description: 'Baidu search page beautification module',
-          links: [
-            { type: 'doc', href: 'https://cworld0.com/blog/pure-baidu' },
-            { type: 'site', href: 'https://userstyles.org/styles/173673/pure' }
-          ]
+          name: 'Gaussian NB',
+          description:
+            'Simulating the Parsimonious Bayesian Algorithm with Python and Finding the Probability Prediction of Breast Cancer ',
+          links: [{ type: 'github', href: 'https://github.com/cworld1/gaussian-nb' }]
         }
       ]}
     />
@@ -86,9 +90,12 @@ const headings = [
     class='my-2'
     projects={[
       {
-        name: 'Rust Learning',
-        description: 'Some notes and code about CWorld learning Rust',
-        links: [{ type: 'github', href: 'https://github.com/cworld1/rust-learning' }]
+        name: 'R Learning',
+        description: 'Some notes and code about learning R language',
+        links: [
+          { type: 'github', href: 'https://github.com/cworld1/r-learning' },
+          { type: 'site', href: 'https://cworld1.github.io/r-learning' }
+        ]
       },
       {
         name: 'CS 213 Learning',
