refactor(components): 组件调整

--- a/src/components/waline/Comment.astro
+++ b/src/components/waline/Comment.astro
@@ -12,7 +12,7 @@ const { class: className } = Astro.props
   config.integ.waline.enable && (
     <comment-component>
       <div id='waline' class={cn('not-prose', className)}>
-        Comment seems to stuck. Try to refresh?✨
+        评论似乎卡住了，尝试刷新？✨
       </div>
     </comment-component>
   )
