--- a/src/components/projects/ProductDelivery.astro
+++ b/src/components/projects/ProductDelivery.astro
@@ -1,16 +1,8 @@
 ---
 import { Image } from 'astro:assets'
 
-import config from '@/site-config'
-
-interface AvatarCache {
-  hash: string
-  path: string
-}
-
 interface friend {
   avatar: string
-  avatar_cache?: AvatarCache
   name: string
   intro: string
   link: string
@@ -33,11 +25,6 @@ interface Props {
   list: friend_list
 }
 const { title, list: friendList, ...props } = Astro.props
-
-const getAvatarSrc = (friend: friend) =>
-  (config.integ?.links?.cacheAvatar ?? false)
-    ? (friend.avatar_cache?.path ?? friend.avatar)
-    : friend.avatar
 ---
 
 {title && <h2 id={friendList.id_name}>{title}</h2>}
@@ -51,8 +38,8 @@ const getAvatarSrc = (friend: friend) =>
               {/* avatar */}
               <div class='relative h-14 w-14 min-w-14 overflow-hidden rounded-full'>
                 <Image
-                  class='my-0 bg-white'
-                  src={getAvatarSrc(frd)}
+                  class='my-0 pa-3'
+                  src={frd.avatar}
                   height={80}
                   width={80}
                   alt='avatar'
@@ -92,22 +79,6 @@ const getAvatarSrc = (friend: friend) =>
                 <p class='my-0 line-clamp-1 text-xs text-muted-foreground'>{frd.intro}</p>
               </div>
             </div>
-            {/* avatar bg */}
-            <Image
-              class='absolute -start-2 top-0 z-0 my-0 h-full w-2/3 bg-white object-cover opacity-15'
-              src={getAvatarSrc(frd)}
-              height={80}
-              width={80}
-              alt='avatar bg'
-              loading='lazy'
-              style={{
-                maskImage: 'linear-gradient(to left, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 1) 100%)',
-                msMaskImage:
-                  '-ms-linear-gradient(to left, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 1) 100%)',
-                WebkitMaskImage:
-                  '-webkit-linear-gradient(to left, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 1) 100%)'
-              }}
-            />
           </div>
         </a>
       ))
