--- a/src/components/projects/ProjectSection.astro
+++ b/src/components/projects/ProjectSection.astro
@@ -5,6 +5,7 @@ import { Image } from 'astro:assets'
 import type { iconsType } from 'astro-pure/types'
 import { Icon } from 'astro-pure/user'
 import { cn } from 'astro-pure/utils'
+import StarIcon from '@/assets/icons/star.svg'
 
 interface Project {
   image?: string
@@ -94,6 +95,9 @@ const projectIconSet: Record<string, iconsType> = {
                   )
                 })}
               </div>
+              {project.links.some((link) => link.type === 'site') && (
+                <StarIcon class='size-20 z-0 text-muted absolute right-1 top-1' slot='before' />
+              )}
             </div>
           </div>
         )
