--- a/src/components/waline/PageInfo.astro
+++ b/src/components/waline/PageInfo.astro
@@ -14,13 +14,13 @@ const path = Astro.url.pathname
 ---
 
 <div class={cn('text-base text-sm text-muted-foreground', className)} {...props}>
-  <span class='waline-pageview-count' data-path={path}></span> views
+  <span class='waline-pageview-count' data-path={path}></span> 查看
   {
     comment && (
       <>
         {' | '}
         <a href='#waline'>
-          <span class='waline-comment-count' data-path={path} /> comments
+          <span class='waline-comment-count' data-path={path} /> 评论
         </a>
       </>
     )
